fix tabs overflow

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -18,7 +18,6 @@ body{
 
 .tab-navigator{
     display: block;
-    height: 30px;
     width: 100%;
     margin-left: 3px;
 }
